# ares-data-collection

./: LICENSE  main.py  pyproject.toml
src/ares/: receiver.py  spectrogram.py  transmitter.py
src/ares/cli/: collect.py  configure.py  main.py  spot_check.py  start.py
src/ares/tui/: receiver.py  receiver.tcss  transmitter.py  transmitter.tcss
