[project]
name = "ares"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ares-iq",
    "ares-lora",
    "typer>=0.26.3",
]

[tool.uv.sources]
ares-iq = { git = "https://github.com/deep-spectrum/Ares-IQ.git", rev = "master" }
ares-lora = { git = "https://github.com/deep-spectrum/ares-lora.git", subdirectory = "serial-driver", rev = "v1.0.0" }
